--- a/index.html
+++ b/index.html
@@ -1,3 +1,22 @@
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Hack</title>
+    <style>
+        body {
+            margin: 0;
+            background: black;
+            overflow: hidden;
+        }
+        canvas {
+            display: block;
+        }
+    </style>
+</head>
+<body>
+
 <canvas id="canvas"></canvas>
 
 <script>
@@ -47,3 +66,6 @@ function step() {
 
 step();
 </script>
+
+</body>
+</html>
